--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ img {
 }
 
 .btn {
-	box-shadow: 2px 2px 10px -1px #F9990A;
+	box-shadow: 2px 2px 10px -1px #302f2e;
 	background-color:#F9990A;
 	border-radius:10px;
 	display:inline-block;
@@ -244,7 +244,7 @@ img {
     cursor: pointer;
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 530px) {
 	.title {
         font-size: 1.5rem;
     }
