--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ img {
 .card {
     margin: 4vh;
     min-height: 55vh;
-    width: 40vh;
+    width: 20vw;
     padding: 2vh;
     position: relative;
     border-radius: 10px;
