--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ img {
 .card {
     margin: 4vh;
     min-height: 55vh;
-    width: 20vw;
+    width: 40vh;
     padding: 2vh;
     position: relative;
     border-radius: 10px;
@@ -171,7 +171,7 @@ img {
     text-align: center;
     margin-top: 3vh;
     text-decoration: underline;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .more-details:hover {
@@ -200,11 +200,11 @@ img {
 
 .downloadUpload h4 {
     margin-bottom: .5vh;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
 }
 
 .downloadUpload h5 {
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 .apps-details {
@@ -225,7 +225,7 @@ img {
 
 .listApps h4{
     margin-bottom: .5vh;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
 }
 
 .listApps a {
