--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ img {
 }
 
 .header-1 {
-    height: 15vh;
+    height: 18vh;
     background-color: rgb(54, 87, 185);
     display: flex;
     justify-content: center;
@@ -31,7 +31,7 @@ img {
 }
 
 .header-2 {
-    height: 18vh;
+    height: 20vh;
     background-color: royalblue;
     display: flex;
     justify-content: center;
@@ -246,11 +246,15 @@ img {
 
 @media screen and (max-width: 430px) {
 	.title {
-        font-size: 1.35rem;
+        font-size: 1.75rem;
     }
 
     .sub-title {
-        font-size: 1.15rem;
+        font-size: 1.25rem;
+    }
+
+    .header-2 {
+        height: 22vh;
     }
 }
 
