--- a/style.css
+++ b/style.css
@@ -268,6 +268,10 @@ img {
     .header-2 {
         height: 18vh;
     }
+
+    .appLogo {
+        width: 15vh;
+    }
 }
 
 @media screen and (max-width: 400px) {
