adjust card-price size

--- a/style.css
+++ b/style.css
@@ -287,9 +287,8 @@ img {
     }
 }
 
-@media screen and (max-width: 1280px) {
-	.card-price h2 {
+@media screen and (max-height: 760px) {
+    .card-price h2 {
         font-size: 2rem;
     }
 }
-
