--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    font-family: "League Spartan", Verdana, Geneva, Tahoma, sans-serif
 }
 
 body {
