--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ img {
 .card-container {
     display: flex;
     justify-content: center;
-    align-items:flex-start;
+    align-items:center;
     flex-wrap: wrap;
 }
 
@@ -72,6 +72,7 @@ img {
 .bestOffer{
     position: absolute;
     top: -3.5%;
+    right: 30%;
     padding: 3% 5%;
     border-radius: 10px;
     border: none;
@@ -297,12 +298,21 @@ img {
     .card {
         width: 55vh;
     }
+
+    .card:nth-child(1) {
+        order: 3;
+    }
+
+    .card:nth-child(3) {
+        order: 1;
+    }
 }
 
 @media only screen and (max-device-width: 932px) and (orientation: landscape) {
     .title {
         font-size: 1.8rem;
     }
+
     .sub-title {
         font-size: 1.3rem;
     }
@@ -322,6 +332,7 @@ img {
     .apps-img-container {
         margin-top: 0;
     }
+
     .appLogo {
         margin-bottom: 2vh;
     }
@@ -329,6 +340,7 @@ img {
     hr {
         display: none;
     }
+
     .card-speed {
         font-size: 2rem;
     }
@@ -338,12 +350,15 @@ img {
     .card-price {
         font-size: 0.8rem;
     }
+
     .card-speed {
         font-size: 1.5rem;
     }
+
     .card-title {
         font-size: 1rem;
     }
+
     .card-benefits {
         font-size: 1rem;
     }
