--- a/style.css
+++ b/style.css
@@ -72,8 +72,9 @@
 
 .bestOffer{
     position: absolute;
+    left: 50%; 
     top: -5%;
-    right: 30%;
+    transform: translateX(-50%);
     padding: 3% 5%;
     border-radius: 10px;
     border: none;
