--- a/style.css
+++ b/style.css
@@ -72,8 +72,9 @@
 
 .bestOffer{
     position: absolute;
-    top: -4%;
-    right: 29%;
+    left: 50%; 
+    top: -5%;
+    transform: translateX(-50%);
     padding: 3% 5%;
     border-radius: 10px;
     border: none;
