--- a/style.css
+++ b/style.css
@@ -307,6 +307,15 @@
         font-size: 70%;
     }
 
+    .title {
+        font-size: 2.25rem;
+    }
+
+    .sub-title {
+        font-size: 1.5rem;
+    }
+
+
     .apps-img-container {
         margin-top: 0;
     }
