--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
     font-weight: bold;
     color: white;
     margin-bottom: 2vh;
+    text-align: center;
 }
 
 .header-2 {
@@ -59,6 +60,7 @@
 .title {
     color: white;
     margin: -5px;
+    text-align: center;
     font-size: 4rem;
     font-weight: 500;
     text-shadow: -5px 1px 5px rgba(32, 27, 27, 0.25);
