--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@
     margin: 4vh;
     background-color: white;
     min-height: 50%;
-    width: 40vh;
+    width: 49vh;
     position: relative;
     border-radius: 10px;
     border: none;
@@ -303,7 +303,7 @@
     flex-direction: column;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (min-height: 600px) {
     .title {
         font-size: 240%;
     }
@@ -350,13 +350,13 @@
     }
 }
 
-@media only screen and (max-width: 933px) and (max-height: 500px) {
+@media only screen and (max-width: 950px) and (max-height: 500px) {
     .title,
     .title-2,
     .city,
     .card-title,
     .card-button {
-        font-size: 140%;
+        font-size: 135%;
     }
 
     .card-price {
@@ -374,7 +374,11 @@
         margin: 1vh;
         font-size: 60%;
     }
-    .card:nth-child(2) {
+    .card:nth-child(3) {
+        order: 2;
+    }
+
+    .card:nth-child(3) {
         order: 2;
     }
 
