--- a/style.css
+++ b/style.css
@@ -275,9 +275,9 @@
 
 .apps-details {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    margin-left: 27%;
+    margin-bottom: 1vh;
     color: #706969;
 }
 
@@ -307,6 +307,11 @@
 
     .card:nth-child(3) {
         order: 1;
+    }
+
+    .card-details {
+        font-size: 80%;
+        text-align: center;
     }
 }
 
@@ -354,6 +359,11 @@
 
     .lines::after {
         right: 30px;
+    }
+
+    .card-details {
+        font-size: 80%;
+        text-align: center;
     }
 
     .bestOffer {
