--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     src: url("./assets/RubikOne-Regular.ttf") format("truetype");
 }
 
+body {
+    -webkit-text-size-adjust: none;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -13,12 +17,12 @@
 }
 
 .header-1 img {
-    height: 7.5vh;
+    height: 50px;
     width: auto;
 }
 
 .header-1 {
-    height: 18vh;
+    height: 120px;
     background: linear-gradient(to right, rgb(47, 76, 163), #2d539b);
     display: flex;
     justify-content: center;
@@ -39,7 +43,7 @@
 }
 
 .header-2 {
-    height: 35vh;
+    height: 300px;
     background-color: rgb(54, 87, 185);
     display: flex;
     justify-content: flex-start;
@@ -61,7 +65,7 @@
     color: white;
     margin: -5px;
     text-align: center;
-    font-size: 4rem;
+    font-size: 350%;
     font-weight: 500;
     text-shadow: -5px 1px 5px rgba(32, 27, 27, 0.6);
     font-family: "Rubik";
@@ -69,14 +73,14 @@
 
 .title-2 {
     color: rgb(43, 205, 255);
-    font-size: 2.3em;
+    font-size: 30px;
     font-weight: 600;
     text-shadow: -5px 1px 5px rgba(32, 27, 27, 0.6);
 }
 
 .speed-effect {
     text-shadow: -2px 0px 2px rgba(220, 220, 220, 0.22),
-        -4px 0px 2px rgba(220, 220, 220, 0.22),
+        -4px 0px 2px rgba(220, 220, 220, 0.215),
         -6px 0px 2px rgba(220, 220, 220, 0.21),
         -8px 0px 2px rgba(220, 220, 220, 0.2),
         -10px 0px 2px rgba(220, 220, 220, 0.19),
@@ -87,13 +91,13 @@
         -20px 0px 2px rgba(220, 220, 220, 0.13),
         -22px 0px 2px rgba(220, 220, 220, 0.12),
         -24px 0px 2px rgba(220, 220, 220, 0.11),
-        -26px 0px 2px rgba(220, 220, 220, 0.1),
-        -28px 0px 2px rgba(220, 220, 220, 0.09),
-        -30px 0px 2px rgba(220, 220, 220, 0.08),
-        -32px 0px 2px rgba(220, 220, 220, 0.07),
-        -34px 0px 2px rgba(220, 220, 220, 0.06),
+        -26px 0px 2px rgba(220, 220, 220, 0.09),
+        -28px 0px 2px rgba(220, 220, 220, 0.07),
+        -30px 0px 2px rgba(220, 220, 220, 0.06),
+        -32px 0px 2px rgba(220, 220, 220, 0.05),
+        -34px 0px 2px rgba(220, 220, 220, 0.04),
         -36px 0px 2px rgba(220, 220, 220, 0.03),
-        -48px 0px 2px rgba(220, 220, 220, 0.02),
+        -48px 0px 2px rgba(220, 220, 220, 0.025),
         -42px 0px 2px rgba(220, 220, 220, 0.02),
         -44px 0px 2px rgba(220, 220, 220, 0.019),
         -46px 0px 2px rgba(220, 220, 220, 0.018),
@@ -104,9 +108,7 @@
         -54px 0px 2px rgba(220, 220, 220, 0.013),
         -56px 0px 2px rgba(220, 220, 220, 0.012),
         -58px 0px 2px rgba(220, 220, 220, 0.011),
-        -60px 0px 2px rgba(220, 220, 220, 0.01),
-        -62px 0px 2px rgba(220, 220, 220, 0.01),
-        -64px 0px 2px rgba(220, 220, 220, 0.01);
+        -60px 0px 2px rgba(220, 220, 220, 0.01);
 }
 
 .card-container {
@@ -277,8 +279,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin-bottom: 1vh;
     color: #706969;
+}
+
+small {
+    margin-top: 0.5vh;
 }
 
 .apps-details h4 {
