--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ body {
 .bestOffer {
     position: absolute;
     width: 100%;
-    height: 5vh;
+    height: 4vh;
     top: -2vh;
     text-align: center;
     display: flex;
@@ -292,24 +292,20 @@ small {
     margin-left: 1vh;
 }
 
-@media screen and (max-height: 700px) and (max-width: 400px) {
+@media screen and (max-height: 900px) and (max-width: 499px) {
     .title {
-        font-size: 200%;
+        font-size: 220%;
     }
     .title-2 {
-        font-size: 160%;
+        font-size: 180%;
     }
 
-    .rotate {
-        margin-top: 6vh;
+    .header-2 {
+        height: 235px;
     }
 
     .card:nth-child(1) {
         order: 3;
-    }
-
-    .card:nth-child(3) {
-        order: 1;
     }
 }
 
@@ -322,7 +318,6 @@ small {
     }
     .card-speed {
         margin-top: 3vh;
-        font-size: 250%;
     }
     .card-container {
         top: -18vh;
@@ -331,11 +326,6 @@ small {
     .card:nth-child(1) {
         order: 3;
     }
-
-    .card:nth-child(3) {
-        order: 1;
-    }
-
     .card-details {
         font-size: 80%;
         text-align: center;
@@ -351,7 +341,7 @@ small {
     }
 }
 
-@media screen and (min-width: 900px) and (min-height: 720px) and (max-width: 1366px) {
+@media screen and (min-width: 1000px) and (min-height: 720px) and (max-width: 1440px) {
     .title:nth-child(1) {
         margin-top: 1vh;
     }
@@ -384,6 +374,7 @@ small {
     .card-speed {
         font-size: 1.7rem;
     }
+
     .lines::before {
         left: 30px;
     }
@@ -406,9 +397,5 @@ small {
     }
     .card:nth-child(3) {
         order: 2;
-    }
-
-    .card:nth-child(3) {
-        order: 1;
     }
 }
