--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 }
 
 .rotate {
-    rotate: -0.7deg;
+    rotate: -1deg;
 }
 
 .main {
@@ -64,8 +64,9 @@ body {
 .title {
     color: white;
     margin: -5px;
+    width: 99vw;
     text-align: center;
-    font-size: 350%;
+    font-size: 340%;
     font-weight: 500;
     text-shadow: -5px 1px 5px rgba(32, 27, 27, 0.6);
     font-family: "Rubik";
@@ -270,7 +271,6 @@ body {
 }
 
 .btn {
-    box-shadow: 2px 2px 10px -1px #302f2e;
     background-color: #f9990a;
     border-radius: 5px;
     cursor: pointer;
@@ -278,7 +278,7 @@ body {
     font-size: 100%;
     font-weight: bold;
     text-align: center;
-    padding: 3% 25%;
+    padding: 3.5% 25%;
     text-decoration: none;
     text-shadow: 0px 1px 0px #f9990a;
     margin-bottom: 2vh;
@@ -286,7 +286,6 @@ body {
 
 .btn:hover {
     background-color: #d68409;
-    box-shadow: 2px 2px 10px -1px #d68409;
     text-shadow: 0px 1px 0px #d68409;
     cursor: pointer;
 }
@@ -358,8 +357,7 @@ small {
 
 @media screen and (max-width: 900px) and (min-height: 900px) {
     .title {
-        font-size: 200%;
-        color: red;
+        font-size: 220%;
     }
 
     .title-2 {
@@ -382,15 +380,6 @@ small {
     .card-details {
         font-size: 80%;
         text-align: center;
-    }
-}
-
-@media screen and (max-height: 750px) {
-    .card-container {
-        top: -16vh;
-    }
-    .card-price {
-        font-size: 150%;
     }
 }
 
@@ -425,12 +414,16 @@ small {
     }
 
     .teste {
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
     }
 
     .first,
     .second {
+        font-size: 70%;
+    }
+
+    .more-details p {
         font-size: 70%;
     }
 
