--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     -webkit-text-size-adjust: none;
+    background-color: white;
 }
 
 * {
@@ -123,6 +124,7 @@ body {
 .card-container {
     position: relative;
     top: -14vh;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: flex-start;
