--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ body {
 .card-price {
     text-align: center;
     display: flex;
-    color: #3d3c3a;
+    color: #5f5959;
     align-items: center;
     justify-content: center;
 }
