--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ body {
     position: relative;
     top: -13vh;
     display: flex;
+    margin-bottom: -50px;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
@@ -333,4 +334,131 @@ body {
 
 small {
     margin-top: 0.5vh;
+}
+
+.benefits {
+    min-height: 400px;
+    background: linear-gradient(to bottom, #2a53e5, #021044);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 2vh;
+}
+
+.switch > .hidden-toggle {
+    display: none;
+}
+
+.switch > .slider {
+    background: #e0e2db;
+    top: -1vh;
+    border-radius: 2rem;
+    transition: all 300ms ease-in-out;
+    width: 8rem;
+    height: 4rem;
+    position: relative;
+    box-shadow: inset -0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2),
+        0 0 1rem rgba(0, 0, 0, 0.1);
+}
+
+.switch > .slider > .button {
+    content: "";
+    position: absolute;
+    width: 3.2rem;
+    height: 3.2rem;
+    background: #4615b2;
+    top: 0.4rem;
+    left: 0.4rem;
+    transition: all 300ms ease-in-out;
+    border-radius: 50%;
+    z-index: 2;
+    box-shadow: inset -0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+}
+
+.switch > .slider:after {
+    position: absolute;
+    top: 50%;
+    right: 1rem;
+    transform: translate(0, -50%);
+    font-size: 1.5rem;
+    line-height: 1.4rem;
+    color: #444;
+    font-weight: bold;
+    z-index: 1;
+    transition: all 300ms ease-in-out;
+    content: "OFF";
+    font-weight: 900;
+}
+
+.switch > .hidden-toggle:checked ~ .slider {
+    background: rgb(241, 78, 50);
+    box-shadow: inset 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2),
+        0 0 1rem rgba(50, 0, 150, 0.2);
+}
+
+.switch > .hidden-toggle:checked ~ .slider > .button {
+    left: 4.4rem;
+    box-shadow: inset 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    background: #e0e2db;
+}
+
+.switch > .hidden-toggle:checked ~ .slider:after {
+    right: 4.4rem;
+    color: #f1f1ff;
+    content: "OFF";
+}
+
+.benefits-header {
+    margin-top: 2vh;
+    text-align: center;
+    color: white;
+    font-size: 200%;
+}
+
+.benefits-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2vh;
+}
+
+.benefits-header h1 {
+    font-weight: 900;
+    margin-bottom: 1vh;
+}
+
+.benefits-header h3 {
+    font-weight: 400;
+}
+
+.advantages {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2vh;
+    margin: 5vh;
+}
+
+.card-advantages {
+    color: white;
+    width: 300px;
+    min-height: 150px;
+    padding: 1.5vh;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card-advantages h4 {
+    font-size: 1.5rem;
+    margin-bottom: 1vh;
+    font-weight: bold;
+}
+
+.card-advantages p {
+    font-size: 1.2rem;
 }
